syntax = "proto3";

package firefly;

message UserMessage {
  uint64 id = 1;
  string to = 2;
  string from = 3;
  bytes text = 4;
  uint64 conversationId = 5;
  uint32 type = 6;
}

message Group {
  uint64 id = 1;
  string name = 2;
  string description = 3;
  bool pfp = 4;
  bytes state = 5;
}

message Groups {
  repeated Group groups = 1;
}

message UserMessages { repeated UserMessage messages = 1; }

message GroupInvite {
  uint64 groupId = 1;
  string inviter = 2;
  string invitee = 3;
  bytes welcomeMessage = 4;
  uint64 commitId = 5;
}

message GroupInvites {
    repeated GroupInvite invites = 1;
}

message GroupMessage {
  uint64 id = 1;
  uint64 groupId = 2;
  bytes message = 3;
}

message GroupKeyPackage {
  int32 id = 1;
  bytes package = 2;
}

message GroupKeyPackages { repeated GroupKeyPackage packages = 1; }

message GroupMessages { repeated GroupMessage messages = 2; }

message ServerMessage {
  oneof message {
    UserMessage userMessage = 1;
    GroupMessage groupMessage = 2;
    UserMessages userMessages = 3;
    GroupMessages groupMessages = 4;
  }
}

message SubscribeGroup {
  uint64 id = 1;
}
message UnSubscribeGroup {
  uint64 id = 2;
}

message ClientMessage {
  oneof message {
    UserMessage userMessage = 1;
    GroupMessage groupMessage = 2;
    UserMessages userMessages = 3;
    GroupMessages groupMessages = 4;
    string bearerToken = 5;
    SubscribeGroup subscribeGroup = 6;
    UnSubscribeGroup unSubscribeGroup = 7;
  }
}


message GroupId { uint64 id = 2; }


message AuthToken {
  string username = 1;
  uint64 valid_until = 2;
  string issuer = 3;
  bytes credential = 4;
}

message SignedToken {
  string kid = 1;
  bytes payload = 2;
  bytes signature = 3;
}

message FireflyClient {
  string username = 1;
  bytes secret = 2;
  bytes public = 3;
  bytes credential = 4;
}


message FireflyGroupExtension {
  string name = 1;
  FireflyGroupRoles roles = 2;
  FireflyGroupChannels channels = 3;
  FireflyGroupMembers members = 4;
}

message FireflyGroupRole {
  uint32 id = 1;
  string name = 2;
  uint64 permissions = 3;
}

message FireflyGroupRoles {
  repeated FireflyGroupRole roles = 1;
}

message FireflyGroupMember {
  string username = 1;
  uint32 role = 2;
}

message FireflyGroupMembers {
  repeated FireflyGroupMember members = 1;
}


message FireflyGroupChannel {
  uint32 id = 1;
  string name = 2;
  uint32 type = 3;
  FireflyGroupRoles roles = 4;
}

message FireflyGroupChannels {
  repeated FireflyGroupChannel channels = 1;
}


message PreKeyBundle {
  int32 registrationId = 1;
  int32 deviceId = 2;
  int32 preKeyId = 3;
  bytes prePublicKey = 4;
  int32 signedPreKeyId = 5;
  bytes signedPrePublicKey = 6;
  bytes signedPreKeySignature = 7;
  bytes identityPublicKey = 8;
  int32 KEMPreKeyId = 9;
  bytes KEMPrePublicKey = 10;
  bytes KEMPreKeySignature = 11;
}

message ConversationStart {
  uint64 conversationId = 1;
  string started_by = 2;
  string other = 3;
  PreKeyBundle bundle = 4;
}

message PreKeyBundles {
  repeated PreKeyBundle bundles = 1;
}

message Conversation {
  uint64 id = 1;
  string startedBy = 2;
  string other = 3;
}

message Conversations {
  repeated Conversation conversations = 1;
}

message UserMessageInner {
  oneof message {
    bytes plainText = 1;
    bytes callMessage = 2;
  }
}
